--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 
 A clean, minimal **personal portfolio website** built to showcase my projects, background, and contact details for **Graduate / Early Career roles** in software engineering and applied AI.
 
-🔗 **Live site:** https://<your-vercel-url>
+🔗 **Live site: https://www.orcasji.dev/>
 📄 **CV:** Available for download directly on the website
 
 ---
@@ -86,3 +86,6 @@ The site is fully responsive and deployed online for quick review by recruiters 
 LinkedIn: https://www.linkedin.com/in/orcas-ji-about-me
 
 GitHub: https://github.com/OrcasJi
+
+
+Deployed on Vercel · Custom domain · HTTPS enabled
