--- a/README
+++ b/README
@@ -3,6 +3,7 @@
 A clean, minimal **personal portfolio website** built to showcase my projects, background, and contact details for **Graduate / Early Career roles** in software engineering and applied AI.
 
 🔗 **Live site: https://www.orcasji.dev/>
+
 📄 **CV:** Available for download directly on the website
 
 ---
@@ -88,4 +89,6 @@ LinkedIn: https://www.linkedin.com/in/orcas-ji-about-me
 GitHub: https://github.com/OrcasJi
 
 
-Deployed on Vercel · Custom domain · HTTPS enabled
+
+
+**Deployed on Vercel · Custom domain · HTTPS enabled
